# signalbot

./: pyproject.toml  renovate.json  renovate.json5
.devcontainer/: Dockerfile
.github/workflows/: deploy-pr.yaml  release.yaml  run-tests.yaml
signalbot/: bot.py
