[tool.poetry]
authors = ["René Filip"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Framework to create your own Signal bots"
exclude = ["tests/"]
keywords = [
  "Signal",
  "Bot",
  "Framework",
  "Home Automation",
]
license = "MIT"
maintainers = ["René Filip"]
name = "signalbot"
readme = "README.md"
repository = "https://github.com/filipre/signalbot"
version = "0.11.0"

[tool.poetry.dependencies]
APScheduler = "3.*"
aiohttp = "3.*"
python = "3.12.*"
redis = "5.*"
websockets = "13.*"

[tool.poetry.dev-dependencies]
black = "24.*"
flake8 = "7.*"
pre-commit = "3.*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
